--- a/app/src/main/res/layout/product_detail_row.xml
+++ b/app/src/main/res/layout/product_detail_row.xml
@@ -1,68 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="@dimen/dp10"
-    android:background="@color/colorWhite"
-    android:orientation="horizontal"
-    android:weightSum="1">
-
-    <ImageView
-        android:id="@+id/product_item_image"
-        android:layout_width="0dp"
-        android:layout_height="@dimen/dp100"
-        android:layout_weight="0.3" />
+    app:cardBackgroundColor="@color/colorWhite"
+    android:layout_marginTop="@dimen/dp5"
+    app:cardCornerRadius="@dimen/cardview_default_radius"
+    app:cardElevation="@dimen/cardview_default_elavation">
 
     <LinearLayout
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="0.7"
-        android:orientation="vertical">
+        android:orientation="horizontal"
+        android:weightSum="1"
+        android:padding="@dimen/dp10">
+
+        <ImageView
+            android:id="@+id/product_item_image"
+            android:layout_width="0dp"
+            android:layout_height="@dimen/dp100"
+            android:layout_weight="0.3" />
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/dp5"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/product_quantity"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:theme="@style/AppTheme.Normal" />
+            android:layout_weight="0.7"
+            android:orientation="vertical"
+            android:layout_marginStart="@dimen/dp5">
 
             <TextView
                 android:id="@+id/product_details"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:theme="@style/AppTheme.Normal" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/product_price_details"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:theme="@style/AppTheme.Normal" />
 
-            <com.flowercentral.flowercentralbusiness.util.CircularTextView
-                android:id="@+id/product_category"
-                android:layout_width="wrap_content"
+            <TextView
+                android:id="@+id/product_message"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="@dimen/dp2"
-                android:gravity="center"
-                android:padding="@dimen/dp2" />
+                android:theme="@style/AppTheme.Normal" />
         </LinearLayout>
 
-        <TextView
-            android:id="@+id/product_message"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:theme="@style/AppTheme.Normal" />
     </LinearLayout>
 
-</LinearLayout>
+</android.support.v7.widget.CardView>
