--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -13,4 +13,6 @@
     <dimen name="nav_header_height">160dp</dimen>
     <dimen name="dp32">32dp</dimen>
     <dimen name="dp100">100dp</dimen>
+    <dimen name="cardview_default_elavation">1dp</dimen>
+    <dimen name="cardview_default_corner_radius">5dp</dimen>
 </resources>
