--- a/app/src/main/res/drawable/flower_image_frame_pink.xml
+++ b/app/src/main/res/drawable/flower_image_frame_pink.xml
@@ -9,6 +9,6 @@
     <!-- Border color and thickness -->
     <stroke
         android:width="2dp"
-        android:color="@color/colorGrey" />
+        android:color="@color/colorPrimary" />
 
 </shape>
