--- a/app/src/main/res/layout/fragment_shop_pictures.xml
+++ b/app/src/main/res/layout/fragment_shop_pictures.xml
@@ -3,8 +3,7 @@
     android:id="@+id/root_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@drawable/ic_background">
+    android:orientation="vertical">
 
     <ImageView
         android:id="@+id/image_view_delete"
