--- a/app/src/main/res/layout/order_item_row.xml
+++ b/app/src/main/res/layout/order_item_row.xml
@@ -26,8 +26,7 @@
                 android:layout_width="0dp"
                 android:layout_height="@dimen/dp100"
                 android:layout_margin="@dimen/dp10"
-                android:layout_weight="0.3"
-                android:background="@drawable/flower_image_frame">
+                android:layout_weight="0.3">
 
                 <ImageView
                     android:id="@+id/order_item_image"
@@ -91,7 +90,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="@dimen/dp10"
-                        android:background="@drawable/flower_image_frame"
+                        android:background="@drawable/flower_image_frame_pink"
                         android:padding="@dimen/dp5"
                         android:textColor="@color/colorPrimary" />
                 </LinearLayout>
