--- a/app/src/main/res/layout/activity_notification_overlay.xml
+++ b/app/src/main/res/layout/activity_notification_overlay.xml
@@ -1,124 +1,162 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/root_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="@dimen/dp32">
-
-    <com.flowercentral.flowercentralbusiness.util.CircularTextView
-        android:id="@+id/text_view_timer"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:gravity="center"
-        android:padding="@dimen/dp32"
-        android:textSize="25sp" />
+    android:background="@color/colorBackground">
 
     <LinearLayout
+        android:id="@+id/btn_wrapper"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/dp16"
+        android:layout_alignParentBottom="true"
+        android:layout_margin="@dimen/dp10"
+        android:orientation="horizontal"
         android:weightSum="2">
 
-        <TextView
+        <Button
+            android:id="@+id/btn_accept"
+            style="@style/TextTheme.Label.Black"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/lbl_order_total" />
+            android:background="@drawable/button_white_background"
+            android:text="@string/lbl_accept" />
 
-        <TextView
-            android:id="@+id/order_total"
+        <Button
+            android:id="@+id/btn_reject"
+            style="@style/TextTheme.Label.Black"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1" />
+            android:layout_marginStart="@dimen/dp5"
+            android:layout_weight="1"
+            android:background="@drawable/button_white_background"
+            android:text="@string/lbl_reject" />
 
     </LinearLayout>
 
-    <LinearLayout
+    <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/dp16"
-        android:weightSum="2">
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/lbl_order_delievry_address" />
+        android:layout_above="@id/btn_wrapper"
+        android:layout_alignParentTop="true"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/order_delivery_address"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-
-            <TextView
-                android:id="@+id/view_on_map"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="end|center_vertical"
-                android:text="@string/link_view_on_map" />
-        </LinearLayout>
-    </LinearLayout>
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-
-        <LinearLayout
-            android:id="@+id/btn_wrapper"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginTop="@dimen/dp16"
-            android:weightSum="2"
-            android:layout_alignParentBottom="true">
-
-            <Button
-                android:id="@+id/btn_accept"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:background="@drawable/button_transparent"
-                android:text="@string/lbl_accept" />
-
-            <Button
-                android:id="@+id/btn_reject"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/dp5"
-                android:layout_weight="1"
-                android:background="@drawable/button_transparent"
-                android:text="@string/lbl_reject" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_above="@id/btn_wrapper"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/dp16"
             android:orientation="vertical"
-            android:layout_alignParentStart="true">
+            android:padding="@dimen/dp32">
 
-            <TextView
-                style="@style/AppTheme.Title"
+            <com.flowercentral.flowercentralbusiness.util.CircularTextView
+                android:id="@+id/text_view_timer"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:gravity="center"
+                android:padding="@dimen/dp32"
+                android:textSize="25sp" />
+
+            <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/order_items" />
+                android:layout_marginTop="@dimen/dp10"
+                app:cardBackgroundColor="@color/colorWhite"
+                app:cardCornerRadius="@dimen/cardview_default_corner_radius"
+                app:cardElevation="@dimen/cardview_default_elavation">
 
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/notification_recycler_view"
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical"
+                    android:padding="@dimen/dp5">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:weightSum="2">
+
+                        <TextView
+                            style="@style/TextTheme.Label.Black"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:text="@string/lbl_order_total" />
+
+                        <TextView
+                            android:id="@+id/order_total"
+                            style="@style/TextTheme.Label.Black"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1" />
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:weightSum="2">
+
+                        <TextView
+                            style="@style/TextTheme.Label.Black"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:text="@string/lbl_order_delievry_address" />
+
+                        <LinearLayout
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:orientation="vertical">
+
+                            <TextView
+                                android:id="@+id/order_delivery_address"
+                                style="@style/TextTheme.Label.Black"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content" />
+
+                            <TextView
+                                android:id="@+id/view_on_map"
+                                style="@style/TextTheme.Label.Black"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:drawableEnd="@drawable/ic_location_red"
+                                android:gravity="end|center_vertical"
+                                android:text="@string/link_view_on_map" />
+                        </LinearLayout>
+
+                    </LinearLayout>
+                </LinearLayout>
+            </android.support.v7.widget.CardView>
+
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="200dp" />
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
 
+                <TextView
+                    style="@style/TextTheme.Title.Black"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="@string/order_items" />
+
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/notification_recycler_view"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+            </LinearLayout>
         </LinearLayout>
-    </RelativeLayout>
-</LinearLayout>
+    </android.support.v4.widget.NestedScrollView>
+
+    <ProgressBar
+        android:id="@+id/progress_bar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:visibility="gone"
+        android:indeterminate="true"/>
+</RelativeLayout>
