--- a/app/src/main/res/layout/fragment_sales_graph.xml
+++ b/app/src/main/res/layout/fragment_sales_graph.xml
@@ -1,71 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/root_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/ic_background"
-    android:orientation="vertical">
+    android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/title_sales_graph"
-        style="@style/AppTheme.Title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/dp16" />
-
-    <LinearLayout
+        style="@style/TextTheme.Title.Black"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/dp16"
-        android:orientation="horizontal"
-        android:weightSum="2">
+        android:layout_margin="@dimen/dp16"
+        android:gravity="center_horizontal"
+        android:text="Order Stats"
+        android:layout_alignParentTop="true"/>
 
-        <TextView
-            style="@style/AppTheme.Label"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center_vertical|end"
-            android:text="@string/lbl_total_sales_order" />
-
-        <TextView
-            android:id="@+id/total_orders"
-            style="@style/AppTheme.Label"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/dp16"
-        android:orientation="horizontal"
-        android:weightSum="2">
-
-        <TextView
-            style="@style/AppTheme.Label"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center_vertical|end"
-            android:text="@string/lbl_total_sales" />
-
-        <TextView
-            android:id="@+id/total_sales"
-            style="@style/AppTheme.Label"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1" />
-
-    </LinearLayout>
+   <include layout="@layout/layout_todays_sales_report"/>
 
     <com.jjoe64.graphview.GraphView
         android:id="@+id/graph_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="@dimen/dp16"
         android:visibility="gone"
-        android:layout_margin="@dimen/dp16"/>
+        android:layout_alignParentBottom="true"
+        android:layout_below="@id/title_sales_graph"/>
 
-</LinearLayout>
+</RelativeLayout>
