--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -48,13 +48,13 @@
 
     <style name="TextTheme.Label.Black" parent="AppTheme">
         <item name="android:textSize">12sp</item>
-        <item name="android:textColor">@color/colorBlack</item>
+        <item name="android:textColor">@color/colorGrey</item>
         <item name="android:padding">6dp</item>
     </style>
 
     <style name="TextTheme.Title.Black" parent="AppTheme">
         <item name="android:textSize">20sp</item>
-        <item name="android:textColor">@color/colorBlack</item>
+        <item name="android:textColor">@color/colorGrey</item>
         <item name="android:padding">16dp</item>
     </style>
 
